# project-manager

./: .gitignore  AGENTS.md  Dockerfile  README.md  invoice-template.md  package-lock.json  package.json  pyrightconfig.json  staging.yaml
backend/: .coverage  TESTING.md  TEST_STATUS.md  UV_QUICKSTART.md  UV_TESTING.md  db.sqlite3  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup_uv_tests.sh  uv_test.py
backend/apps/accounts/: admin.py  forms.py  models.py  serializers.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/boards/: admin.py  automation.py  models.py
backend/apps/boards/migrations/: 0001_initial.py  0002_boardcard_ai_content_pack_settings.py  0005_remove_ai_content_pack_settings.py  (+4 more)
backend/apps/core/: AUTOMATION_REFACTORING.md  __init__.py  automation_base.py
backend/apps/invoices/: admin.py  models.py  serializers.py  views.py
backend/apps/marketing/: admin.py  models.py  serializers.py  views.py
backend/apps/projects/: admin.py  automation.py  automation_refactored.py  models.py  serializers.py  views.py
backend/apps/tenants/: admin.py  models.py  permissions.py  serializers.py  tenancy.py  views.py
backend/apps/web/: middleware.py  urls.py  views.py  views_backup.py
backend/config/: settings.py  urls.py
backend/templates/web/: base.html
backend/tests/: README.md  __init__.py  conftest.py  test_accounts.py  test_api.py  test_automation.py  test_boards_models.py  test_integration.py  test_invoices_pdf_templates.py  test_projects_models.py  test_tenants_models.py  test_web_views.py
(+106 files in other folders)
