[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.5",
    "django-cors-headers==4.6.0",
    "django-environ==0.12.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.13",
    "python-dateutil==2.9.0.post0",
    "whitenoise==6.8.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
]
